Fix overflowing content issue

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 35% 50%;
   gap: 15%;
+  height: auto;
 }
 
 .about__me {
@@ -69,10 +70,6 @@
 
 /* Tablets */
 @media screen and (max-width: 1024px) {
-  #about {
-    margin-bottom: 26rem;
-  }
-
   .about__container {
     grid-template-columns: 1fr;
     gap: 0;
@@ -90,11 +87,6 @@
 
 /* Mobiles */
 @media screen and (max-width: 600px) {
-
-  #about {
-    margin-bottom: 15rem;
-  }
-
   .about__me {
     width: 65%;
     margin: 0 auto 3rem;
@@ -103,6 +95,7 @@
   .about__cards {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+    
   }
 
   .about__content {
