--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 3rem;
+  height: auto;
 }
 
 .service {
@@ -54,10 +55,6 @@
 
 /* Tablets */
 @media screen and (max-width: 1024px) {
-  #services {
-    margin-bottom: 40rem;
-  }
-
   .services__container {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
@@ -70,10 +67,6 @@
 
 /* Mobiles */
 @media screen and (max-width: 600px) {
-  #services {
-    margin-bottom: 30rem;
-  }
-
   .services__container{
     grid-template-columns: 1fr;
     gap: 1.5rem;
