--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,6 +1,7 @@
 .container.testimonials__container {
   width: 40%;
   padding-bottom: 4rem;
+  height: auto;
 }
 
 .client__avatar {
