--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,6 @@ img {
   }
 
   section {
-    height: auto;
     margin-top: 6rem;
   }
 }
@@ -129,6 +128,10 @@ img {
 @media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm)
+  }
+
+  section {
+    margin-top: 10rem;
   }
 
   section > h2 {
